--- a/src/components/Channels/Channel.css
+++ b/src/components/Channels/Channel.css
@@ -2,7 +2,7 @@
 .app-layout {
     display: grid;
     grid-template-columns: 250px 1fr 400px;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     gap: 20px;
     padding: 20px;
@@ -25,7 +25,7 @@ html, body {
 .right-column {
     display: flex;
     flex-direction: column;
-    height: 50%;
+    height: 85%;
 }
 
 /* channel information */
@@ -48,7 +48,7 @@ html, body {
 .chat-area {
     display: flex;
     flex-direction: column;
-    height: 70%;
+    height: 100%;
     padding: 15px;
 }
 
